fix spacing between trym grid

--- a/app/assets/stylesheets/trym_grid.scss
+++ b/app/assets/stylesheets/trym_grid.scss
@@ -4,7 +4,7 @@
 		@extend .btn;
 		@extend .btn-primary;
 		width: 215px;
-		margin: 2px 0px;
+		margin: 2px 2px;
 		.grid-title{ font-weight: bold }
 	}
 	.trym-category-grid-cell.off{
